--- a/douban/index.html
+++ b/douban/index.html
@@ -25,14 +25,53 @@
 			</div>
 		</div>
 		<div class="logo-search">
-			<a href=""><img src="images/lg_movie_a12_2.png"></a>
-			<form action="" method="get" name="form">
-				<input type="text" name="searchBox" class="searchBox" value="电影、影人、影院、电视剧">
-				<input type="submit" name="searchBtn" class="searchBtn" value="搜索">
-			</form>
-		</div>
-		<div>
+			<div class=" w950">
+				<a href=""><img src="images/lg_movie_a12_2.png"></a>
+				<form action="" method="get" name="	form">
+					<input type="text" name="	searchBox" class="searchBox" 	value="电影、影人、影院、电视剧">
+					<input type="submit" name="	searchBtn" class="searchBtn" 	value="搜索">
+				</form>
+			</div>
 			
 		</div>
+		<div class="sub-nav w950">
+			<a href="#">影讯&购票</a>
+			<a href="#">电视剧</a>
+			<a href="#">排行榜</a>
+			<a href="#">分类</a>
+			<a href="#">影评</a>
+			<a href="#">预告片</a>
+		</div>
+	</div><!--end of hd-->
+	<!-- start of bd -->
+	<div id="bd" class="w950">
+		<div class="ad">
+			<a href="#">
+				<img src="temp/ad1.jpg" alt="">
+			</a>	
+		</div>
+		
+
+		<div class="con fl">
+			<div class="now">
+				<div class="hd borderbom">
+					<div class="scroll-btn fr">
+						<a href="#" class="next">向后</a>
+						<a href="#" class="prev">向前</a>
+						
+						<span> 3 / 5</span>
+					</div>
+					<h2>
+						正在热映 
+						<span><a href="#">全部正在热映>></a><a href="#">即将上映>></a></span>
+					</h2>
+				</div>
+				<div class="bd">
+					
+				</div>
+			</div>
+		</div>
+		
+		
 	</div>
 </body>
