update now sub-nav

--- a/douban/index.html
+++ b/douban/index.html
@@ -59,7 +59,7 @@
 						<a href="#" class="next">向后</a>
 						<a href="#" class="prev">向前</a>
 						
-						<span> 3 / 5</span>
+						<span class="num"> 3 / 5</span>
 					</div>
 					<h2>
 						正在热映 
