now model finished

--- a/douban/index.html
+++ b/douban/index.html
@@ -67,9 +67,35 @@
 					</h2>
 				</div>
 				<div class="bd">
-					
+					<ul class="piclist cf">
+						<li>
+							<a href="#"><img src="temp/p1.jpg" alt=""></a>
+							<h3><a href="#">海底大冒险</a></h3>
+							<div class="score"><span class="star star5"></span>4.7</div>
+							<input type="button" name="buy" class="buyBtn" value="选座购票">
+						</li>
+						<li>
+							<a href="#"><img src="temp/p2.jpg" alt=""></a>
+							<h3><a href="#">风暴</a></h3>
+							<div class="score"><span class="star star7"></span>6.5</div>
+							<input type="button" name="buy" class="buyBtn" value="选座购票">
+						</li>
+						<li>
+							<a href="#"><img src="temp/p3.jpg" alt=""></a>
+							<h3><a href="#">青蛙王国</a></h3>
+							<div class="score"><span class="star star7"></span>6.8</div>
+							<input type="button" name="buy" class="buyBtn" value="选座购票">
+						</li>
+						<li>
+							<a href="#"><img src="temp/p4.jpg" alt=""></a>
+							<h3><a href="#">奥斯匹林的陷落...</a></h3>
+							<div class="score"><span class="star star7"></span>6.3</div>
+							<input type="button" name="buy" class="buyBtn" value="选座购票">
+						</li>
+					</ul>
 				</div>
-			</div>
+			</div>  <!-- end of now  -->
+			
 		</div>
 		
 		
