hot module uodated

--- a/douban/index.html
+++ b/douban/index.html
@@ -95,9 +95,39 @@
 					</ul>
 				</div>
 			</div>  <!-- end of now  -->
-			
+
+			<div class="hot">
+				<div class="hd borderbom">
+					<h2>近期热门 <span><a href="#">更多影视剧>></a></span></h2>
+				</div>
+				<div class="bd">
+					<ul class="piclist cf">
+						<li>
+							<a href="#"><img src="temp/p5.jpg" alt=""></a>
+							<h3><a href="#">开馆</a></h3>
+						</li>
+						<li>
+							<a href="#"><img src="temp/p6.jpg" alt=""></a>
+							<h3><a href="#">霍比特人2：史矛革之战</a></h3>
+						</li>
+						<li>
+							<a href="#"><img src="temp/p7.jpg" alt=""></a>
+							<h3><a href="#">美国恐怖故事：女巫集会...</a></h3>
+						</li>
+						<li>
+							<a href="#"><img src="temp/p8.jpg" alt=""></a>
+							<h3><a href="#">神盾局特工</a></h3>
+						</li>
+						<li>
+							<a href="#"><img src="temp/p9.jpg" alt=""></a>
+							<h3><a href="#">行尸走肉 第四季</a></h3>
+						</li>
+					</ul>
+				</div>
+			</div><!-- end of hot -->
+
 		</div>
-		
+		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 		
 	</div>
 </body>
