user module updated

--- a/douban/index.html
+++ b/douban/index.html
@@ -126,6 +126,36 @@
 				</div>
 			</div><!-- end of hot -->
 
+			<div class="user">
+				<div class="hd borderbom">
+					<h2>热门豆列</h2>
+				</div>
+				<div class="bd">
+					<ul class="pic-text cf">
+						<li>
+							<a href="#"><img src="temp/u1.jpg" alt=""></a>
+							<h3><a href="#">关于德国 你该看的</a></h3>
+							<p>共65部影片 来自菩提风花</p>
+						</li>
+						<li>
+							<a href="#"><img src="temp/u2.jpg" alt=""></a>
+							<h3><a href="#">【坚强的女性】</a></h3>
+							<p>共205部影片 来自影至</p>
+						</li>
+						<li>
+							<a href="#"><img src="temp/u3.jpg" alt=""></a>
+							<h3><a href="#">台湾金马奖获奖作品。（最佳影片，最佳男女主角）</a></h3>
+							<p>共122部影片 来自 嘿嘿嘿</p>
+						</li>
+						<li>
+							<a href="#"><img src="temp/u4.jpg" alt=""></a>
+							<h3><a href="#">Only love——IMDB高分冷门影片</a></h3>
+							<p>共133部影片 来自 今生、唯爱</p>
+						</li>
+					</ul>
+				</div>
+			</div><!-- end of user -->
+
 		</div>
 		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 		
