--- a/douban/index.html
+++ b/douban/index.html
@@ -155,7 +155,31 @@
 					</ul>
 				</div>
 			</div><!-- end of user -->
-
+			<div class="comment">
+				<div class="hd borderbom">
+					<h2>最受欢迎的影评 <span><a href="#">更多热门影评>></a><a href="#">新片影评>></a></span></h2>
+				</div>
+				<div class="bd">
+					<ul class="pic-text cf">
+						<li class="borderbom">
+							<a href="#"><img src="temp/p14.jpg" alt=""></a>
+							<h3><a href="#">"情怀肥大症"的病理分析</a></h3>
+							<div class="score">
+								鸣柳书房 评论《我是歌手 第二季》<span class="star star6"></span>
+							</div>
+							<p>《我是歌手》第二季第一场，韩磊夺冠，韦唯第二，曹格邓紫棋分居第五和第六。于是网友又开战了。一方为曹邓叫屈，一方说韩磊就是好来就是好。六零后的韩与九零后的邓，到底哪个更好？二者仅仅是风格之别无从比较，还是说风格归风格，艺术上的高下总是...<a href="#">（全文）</a></p>
+						</li>
+						<li>
+							<a href="#"><img src="temp/p15.jpg" alt=""></a>
+							<h3><a href="#">七十年代的恐慌</a></h3>
+							<div class="score">
+								柴斯卡 评论《火烧摩天楼》<span class="star star6"></span>
+							</div>
+							<p>138层的世界第一高楼在旧金山落成，不想在顶楼的竣工庆典开始后不久即因电力系统短路引发火灾，火势很快时空——原来建筑商邓肯极其女婿出于虚荣心不肯降低楼层高度，偷偷修改了建筑师道格的方案，为了节省成本宁可偷工减料，造成了一定豆腐渣工程...<a href="#">（全文）</a></p>
+						</li>
+					</ul>
+				</div>
+			</div>
 		</div>
 		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 		
