--- a/douban/index.html
+++ b/douban/index.html
@@ -179,6 +179,80 @@
 						</li>
 					</ul>
 				</div>
+			</div><!-- end of comment -->	
+		</div>
+		<div class="side fr">
+			<div class="search-cinema cf">
+				<form action="" method="get" name="form">
+					<div class="like-select fl">
+						<div id="city">北京</div>
+						<ul>
+							<li>北京</li>
+							<li>上海</li>
+							<li>广州</li>
+						</ul>
+					</div>
+					<div class="search fl">
+						<input type="text" name="searchBox" class="searchBox" value="搜索本地影院">
+						<input type="submit" name="searchBtn" class="searchBtn" value="搜索">
+					</div>
+				</form>
+			</div><!-- end of search-cinema -->
+			<div class="class">
+				<div class="hd borderbom">
+					<h2>影片分类 <span><a href="#">所有分类>></a></span></h2>
+				</div>
+
+				<div class="bd">
+					<ul class="cf">
+						<li><a href="#">爱情</a></li>
+						<li><a href="#">喜剧</a></li>
+						<li><a href="#">动画</a></li>
+						<li><a href="#">短片</a></li>
+						<li><a href="#">悬疑</a></li>
+						<li><a href="#">剧情</a></li>
+						<li><a href="#">动作</a></li>
+						<li><a href="#">科幻</a></li>
+						<li><a href="#">纪录片</a></li>
+						<li><a href="#">犯罪</a></li>
+						<li><a href="#">惊悚</a></li>
+						<li><a href="#">恐怖</a></li>
+						<li><a href="#">灾难</a></li>
+						<li><a href="#">历史</a></li>
+						<li><a href="#">战争</a></li>
+						<li><a href="#">传记</a></li>
+						<li><a href="#">奇幻</a></li>
+						<li><a href="#">冒险</a></li>
+						<li><a href="#">美国</a></li>
+						<li><a href="#">香港</a></li>
+						<li><a href="#">日本</a></li>
+						<li><a href="#">中国</a></li>
+						<li><a href="#">英国</a></li>
+						<li><a href="#">法国</a></li>
+						<li><a href="#">韩国</a></li>
+						<li><a href="#">台湾</a></li>
+						<li><a href="#">意大利</a></li>
+						<li><a href="#">德国</a></li>
+					</ul>
+				</div>
+			</div>
+
+			<div class="list">
+				<div class="hd borderbom"><h2>本周口碑榜 <span><a href="#">更多榜单>></a></span></h2></div>
+				<div class="bd">
+					<ul>
+						<li><span>1</span><a href="#">许愿</a></li>
+						<li><span>2</span><a href="#">极速风流</a></li>
+						<li><span>3</span><a href="#">时空恋旅人</a></li>
+						<li><span>4</span><a href="#">霍比特人2：史矛革之战</a></li>
+						<li><span>5</span><a href="#">一切尽失</a></li>
+						<li><span>6</span><a href="#">大梦想家</a></li>
+						<li><span>7</span><a href="#">未来学大会</a></li>
+						<li><span>8</span><a href="#">孤独的生还者</a></li>
+						<li><span>9</span><a href="#">盛夏的方程式</a></li>
+						<li><span>10</span><a href="#">救火英雄</a></li>
+					</ul>
+				</div>
 			</div>
 		</div>
 		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
