--- a/douban/index.html
+++ b/douban/index.html
@@ -253,6 +253,35 @@
 						<li><span>10</span><a href="#">救火英雄</a></li>
 					</ul>
 				</div>
+			</div> <!-- end of list -->
+
+			<div class="top">
+				<div class="hd borderbom">
+					<h2>豆瓣电影TOP250 <span><a href="#">更多>></a></span></h2>
+				</div>
+
+				<div class="bd">
+					<ul class="piclist cf">
+						<li>
+							<a href="#"><img src="temp/p10.jpg" alt=""></a>
+							<h3><a href="#">恶童</a></h3>
+
+						</li>
+						<li>
+							<a href="#"><img src="temp/p11.jpg" alt=""></a>
+							<h3><a href="#">V字仇杀队</a></h3>
+						</li>
+						<li>
+							<a href="#"><img src="temp/p12.jpg" alt=""></a>
+							<h3><a href="#">追随</a></h3>
+						</li>
+						<li>
+							<a href="#"><img src="temp/p13.jpg" alt=""></a>
+							<h3><a href="#">可可西里</a></h3>
+						</li>
+					</ul>
+				</div>
+
 			</div>
 		</div>
 		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
