contact model updated

--- a/douban/index.html
+++ b/douban/index.html
@@ -281,7 +281,23 @@
 						</li>
 					</ul>
 				</div>
+			</div>
 
+			<div class="contact">
+				<div class="hd borderbom">
+					<h2>合作联系</h2>
+				</div>
+
+				<div class="bd">
+					<p><a href="#">申请开通影片小站</a></p>
+					<p><a href="#">申请开用电影院小站</a></p>
+					<p>邮箱：movie@douban.com</p>
+
+					<div class="client">
+						<h3><a href="#">豆瓣电影客户端</a></h3>
+						<p>让买票看电影更简单</p>
+					</div>
+				</div>
 			</div>
 		</div>
 		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
