--- a/douban/index.html
+++ b/douban/index.html
@@ -44,7 +44,7 @@
 		</div>
 	</div><!--end of hd-->
 	<!-- start of bd -->
-	<div id="bd" class="w950">
+	<div id="bd" class="w950 cf">
 		<div class="ad">
 			<a href="#">
 				<img src="temp/ad1.jpg" alt="">
@@ -300,7 +300,11 @@
 				</div>
 			</div>
 		</div>
-		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-		
+	</div><!-- end of bd -->
+
+	<!-- start of ft -->
+	<div id ="ft" class="w950">
+		<span class="fr"><a href="#">关于豆瓣</a>	<a href="#">在豆瓣工作</a><a href="#">联系我们</a><a href="#">免责声明</a><a href="#">帮助中心</a><a href="#">开发者</a><a href="#">手机电影</a><a href="#">豆瓣广告</a></span>
+		<span>©2005-2014 douban.com all rights reserved</span>
 	</div>
 </body>
