--- a/douban/introduce.html
+++ b/douban/introduce.html
@@ -59,11 +59,20 @@
 							<li>制片国家/地区 <a href="#">中国大陆</a></li>
 							<li>语言：<a href="#">汉语普通话</a></li>
 							<li>上映日期：<a href="#">2013-12-28</a></li>
-							<li></li>
+							<li>片长：<span>88分钟</span></li>
+							<li>又名： <span>The Frog Kingdom</span></li>
 						</ul>
 					</div>
 					<div class="film-star fr">
-						
+						<div class="total"><span class="bigstar bigstar7"></span> 6.8</div>
+						<div class="num">(<a href="#">780人评价</a>)</div>
+						<ul>
+							<li><span class="minstar minstar5"></span><span class="scale" style="width: 25.1%"></span>25.1%</li>
+							<li><span class="minstar minstar5"></span><span class="scale" style="width: 24.7%"></span>24.7%</li>
+							<li><span class="minstar minstar5"></span><span class="scale" style="width: 28.4%"></span>28.4%</li>
+							<li><span class="minstar minstar5"></span><span class="scale" style="width: 8.4%"></span>8.4%</li>
+							<li><span class="minstar minstar5"></span><span class="scale" style="width: 13.5%"></span>13.5%</li>
+						</ul>
 					</div>
 				</div>
 			</div>
