--- a/douban/introduce.html
+++ b/douban/introduce.html
@@ -75,6 +75,66 @@
 						</ul>
 					</div>
 				</div>
+			</div> <!-- end of intro-star -->
+
+			<div class="mystar">
+				<div class="recommend"><a href="#">推荐</a></div>
+				<div class="op1"><a href="#">想看</a><a href="#">看过</a><span class="givestar">评价： 
+					<em class="graystar"></em>
+					<em class="graystar"></em>
+					<em class="graystar"></em>
+					<em class="graystar"></em>
+					<em class="graystar"></em>
+				</span></div>
+				<div class="op2">
+					<a href="#" class="brief">写短评</a>
+					<a href="#" class="long">写影评</a>
+					<a href="#" class="share">分享到</a>
+				</div>
+			</div>
+
+			<div class="synopsis">
+				<h3>青蛙王国的剧情简介</h3>
+				<div class="bd">
+					<p>在一个遥远的地方，那里住着一群善良勇敢的青蛙，他们在青蛙王国的统领下过着祥和安宁的胜过，蛙国每四年举行一次运动会，选出优秀的勇士来保卫蛙国。现在这4年一度的盛世又要来临了，而这届运动会于往年不同：它将左右蛙国未来的命运，蛙王江选取最强的勇士成为女婿</p>
+					<p>当全国上下都热情高涨的投入到这场盛会中时，谁也没有想到的是，作为主角的公主竟然离家出走了，而且还参加了运动会。本想找回自尊的公主遇到劲敌闪电蛙的同时，也陷入了一场惊天阴谋！</p>
+					<p>住在蛙国附近的蛇王曾经被年轻的青蛙国王砍断尾巴， 对蛙国国王怀恨在心。多年来，蛇王一直企图征服蛙国为蛇国积蓄能量，为此悄悄地回复元气，秘密武器也将研制成功。他派出了蛙国叛徒参加运动会计划夺冠，借机控制蛙国。</p>
+					<p>察觉到的公主、“小雨点”和伙伴们采取了行动，新一轮的蛇娃大战一触即发......</p>
+				</div>
+			</div>
+
+			<div class="pic">
+				<h3>青蛙王国的预告片和图片 <span>(
+					<a href="#">预告片9</a>| <a href="#">图片144</a>|
+					<a href="#">添加图片</a>
+				)</span></h3>
+				<div class="bd">
+					<ul class="piclist cf">
+						<li>
+							<a href="#">
+								<img src="temp/i_p1.jpg" alt="" width="178" height="100">
+							</a>
+							<span class="play"></span>
+						</li>
+						<li>
+							<a href="#"><img src="temp/i_p2.jpg" alt=""></a>
+						</li>
+						<li>
+							<a href="#"><img src="temp/i_p3.jpg" alt=""></a>
+						</li>
+						<li>
+							<a href="#"><img src="temp/i_p4.jpg" alt=""></a>
+						</li>
+						<li>
+							<a href="#"><img src="temp/i_p5.jpg" alt=""></a>
+						</li>
+					</ul>
+				</div>
+			</div>
+
+			<div class="filmbrief">
+				<h3>青蛙王国的短评 <span>(全部468条)</span></h3>
+
 			</div>
 		</div>
 	</div>
