pic model update

--- a/douban/introduce.html
+++ b/douban/introduce.html
@@ -133,7 +133,18 @@
 			</div>
 
 			<div class="filmbrief">
-				<h3>青蛙王国的短评 <span>(全部468条)</span></h3>
+				<h3>
+					<a href="#" class="isay fr">我来说两句</a>
+					青蛙王国的短评 <span>(全部468条)</span>
+				</h3>
+				<div class="bd">
+					<dl>
+						<dt>热门/ <a href="#">最新</a><a href="#">我关注的</a></dt>
+						<dd>
+							<div class="name"><a href="#"></a></div>
+						</dd>
+					</dl>
+				</div>
 
 			</div>
 		</div>
