--- a/douban/introduce.html
+++ b/douban/introduce.html
@@ -135,15 +135,25 @@
 			<div class="filmbrief">
 				<h3>
 					<a href="#" class="isay fr">我来说两句</a>
-					青蛙王国的短评 <span>(全部468条)</span>
+					青蛙王国的短评 <span>(<a href="#">全部468条</a>)</span>
 				</h3>
 				<div class="bd">
 					<dl>
 						<dt>热门/ <a href="#">最新</a><a href="#">我关注的</a></dt>
 						<dd>
-							<div class="name"><a href="#"></a></div>
+							<div class="name"><a href="#">风蚀 <span class="star star10"></span><em>2013-12-28</em></a></div>
+							<p>
+								国产良心，至今为止看过最好的国产3d动画。
+							</p>
+						</dd>
+						<dd>
+							<div class="name"><a href="#">Eyes</a> 
+							<span class="star star10"></span><em>2013-12-01</em>
+							</div>
+							<p>国产动画就应该这样子</p>
 						</dd>
 					</dl>
+					<div> > <a href="#">更多短评468条</a></div>
 				</div>
 
 			</div>
