--- a/douban/introduce.html
+++ b/douban/introduce.html
@@ -45,7 +45,7 @@
 	</div><!--end of hd-->
 	<!-- start of bd -->
 	<div id="bd" class="w950 cf">
-		<div class="con f1">
+		<div class="con fl">
 			<div class="intro-star">
 				<h2>青蛙王国 <span>(2013)</span></h2>
 				<div class="bd cf">
@@ -155,9 +155,44 @@
 					</dl>
 					<div> > <a href="#">更多短评468条</a></div>
 				</div>
+			</div>
 
+
+			<div class="filmlong">
+				<h3><a href="#" class="isay fr">我来评论这部电影</a>青蛙王国的影评 <span>（ <a href="#">全部34</a>）</span></h3>
+				<div class="bd">
+					<div class="comm">
+						<dl>
+							<dt>
+								<a href="#">
+									<img src="temp/u1.jpg" alt="" width="36" height="36">
+								</a>
+								<h3><a href="#">零品牌在成长</a></h3>
+							</dt>
+							<dd>
+								<div class="name"><a href="#">走走</a><em>2013-12-29 10:29:54</em><span class="star star8"></span></div>
+								<p>我是在电影点映的时候看的这部片子，活动现场熙熙攘攘好不热闹。其实我想说，我对中国本土优秀动画片的概念还停留在“神笔马良”年代，对于近几年蜂拥而至的“喜羊羊范儿”着实无法接受。我是个标准的80后，也许有人说，这就是挣小孩钱的片子，但我想说《青蛙王国》真心没有那么简单。在点映的时候，我旁边坐的是一个大约5岁左右的小孩，是父母带着来的，小孩子目不转睛......</p>
+								<div class="ope">44/48 有用 <a href="#">13回复</a></div>
+							</dd>
+						</dl>
+
+					</div>
+
+					<div> <a href="#" class="more">>更多影评34篇</a>
+						
+					</div>
+				</div>
 			</div>
 		</div>
+
+		<div class="side fr">
+			<div class="buy">
+				<a href="#">选座购票</a>
+				<p>豆瓣售价40元起</p>
+			</div>
+			<div class="ad"><a href="#"><img src="temp/ad2.jpg" alt=""></a></div>
+		</div>
+
 	</div>
 	<!-- start of ft -->
 	<div id ="ft" class="w950">
