--- a/soufang/index.html
+++ b/soufang/index.html
@@ -33,15 +33,63 @@
 						<li><a href="contacts.html">联系我们</a></li>
 					</ul>
 				</nav>
-				<!-- <div id="faded"> -->
+				<div id="faded">
 					<!-- 轮播图 -->
-					<!-- <div class="rap">
+					<div class="rap">
 						<a href="#"><img src="images/big-img1.jpg" alt="" width="571" height="398"></a>
 						<a href="#"><img src="images/big-img2.jpg" alt="" width="571" height="398"></a>
 						<a href="#"><img src="images/big-img3.jpg" alt="" width="571" height="398"></a>
-					</div> -->
+					</div>
 					<!-- 轮播的右边的文字 -->
-					
+					<ul class="pagination"> 
+						<li>
+							<a href="#" rel="0">
+								<img src="images/f_thumb1.png" alt="">
+								<span class="left">
+									英国独家别墅 <br>
+									2007年建成 <br>
+									500平方米
+								</span>
+								<span class="right">
+									钢架，玻璃 <br>
+									2层，3卧室 <br>
+									2个洗手间
+								</span>
+							</a>
+						</li>
+
+						<li>
+							<a href="#" rel="1">
+								<img src="images/f_thumb2.png" alt="">
+									<span class="left">
+									英国独家别墅 <br>
+									2007年建成 <br>
+								  500平方米
+							  </span>
+							  <span class="right">
+								  钢架，玻璃 <br>
+								  2层，3卧室 <br>
+							    2个洗手间
+						    </span>
+					    </a>
+				    </li>
+				    <li>
+				    	<a href="#" rel="2">
+				    		<img src="images/f_thumb3.png" alt="">
+				    		<span class="left">
+				    			英国独家别墅 <br>
+				    			2007年建成 <br>
+				    			500平方米 
+				    		</span>
+				    		<span class="right">
+				    			钢架，玻璃 <br>
+				    			2层，3卧室 <br>
+				    			2个洗手间 
+				    		</span>
+				    	</a>
+				    </li>
+					</ul>
+					<img src="images/extra-banner.png" alt="" class="extra-banner">
 				</div>
 			</div>
 		</header>
