main content updated

--- a/soufang/index.html
+++ b/soufang/index.html
@@ -93,5 +93,74 @@
 				</div>
 			</div>
 		</header>
+		<!-- 网站内容部分 -->
+    <section id="content">
+    	<div class="container_16">
+    		<!-- <div class="clearfix"> -->
+    			<section id="mainContent" class="grid_10">
+    				<article>
+    					<h2>欢迎来到国外不动产投资管理中心</h2>
+    					<h3>时间不可空过，惟用之于有益的工作；一切无益的行动，应该完全制止。——富兰克林（美国）</h3>
+    					<h4>如果说时间是最宝贵的东西，那么浪费时间就是最大的挥霍——富兰克林（美国）</h4>
+    					<p>你热爱生命吗？那么别浪费时间，因为时间是组成生命的材料。——富兰克林（美国）</p>
+    					<a href="#" class="button">了解更多</a>
+    				</article>
+    				<article class="last">
+    					<h2>最新装修的房屋列表</h2>
+    					<h5>当一个人真正觉悟那一刻，他放弃追寻外在世界的财富，而开始追寻他内心世界的真正财富。不论你在什么时候开始，最重要的是开始之后就不要停止。不论你在什么时候结束，重要的是结束之后就不要悔恨。</h5>
+    					<ul class="img-list clearfix">
+    						<li><a href="#"><img src="images/thumb1.jpg" alt=""></a></li>
+    						<li><a href="#"><img src="images/thumb2.jpg" alt=""></a></li>
+    						<li><a href="#"><img src="images/thumb3.jpg" alt=""></a></li>
+    						<li><a href="#"><img src="images/thumb4.jpg" alt=""></a></li>
+    						<li><a href="#"><img src="images/thumb5.jpg" alt=""></a></li>
+    						<li><a href="#"><img src="images/thumb6.jpg" alt=""></a></li>
+    						<li><a href="#"><img src="images/thumb7.jpg" alt=""></a></li>
+    						<li><a href="#"><img src="images/thumb8.jpg" alt=""></a></li>
+    						<li><a href="#"><img src="images/thumb9.jpg" alt=""></a></li>
+    					</ul>
+    					<a href="#" class="button">了解更多</a>
+    				</article>
+    			</section>
+    			<aside class="grid_6">
+    				<div class="prefix_1">
+    					<article>
+    						<div class="box">
+    							<h2>5步成为优秀的房产经纪人</h2>
+    							<dl class="accordion">
+    								<dt><img src="images/icon1.gif" alt=""><a href="#">了解用户需求</a></dt>
+
+    								<dt><img src="images/icon2.gif" alt=""><a href="#">了解用户需求</a></dt>
+
+    								<dt><img src="images/icon3.gif" alt=""><a href="#">了解用户需求</a></dt>
+
+    								<dt><img src="images/icon4.gif" alt=""><a href="#">了解用户需求</a></dt>
+
+    								<dt><img src="images/icon5.gif" alt=""><a href="#">了解用户需求</a></dt>
+
+    							</dl>
+    						</div>
+    					</article>
+    					<article class="last">
+    						<h2>我们的办公地点</h2>
+    						<p><img src="images/map.jpg" alt=""></p>
+    						<div class="wrapper">
+    							<ul class="list1 grid_3 alpha">
+    								<li><a href="#">北美</a></li>
+    								<li><a href="#">欧洲</a></li>
+    								<li><a href="#">拉丁美洲</a></li>
+    							</ul>
+    							<ul class="list1 grid_2 omega">
+    								<li><a href="#">亚洲</a></li>
+    								<li><a href="#">澳洲</a></li>
+    								<li><a href="#">南美洲</a></li>
+    							</ul>
+    						</div>
+    					</article>
+    				</div>
+    			</aside>
+    		<!-- </div> -->
+    	</div> <!-- end of container_16 -->
+    </section>
 	</body>
 </html>
