--- a/soufang/index.html
+++ b/soufang/index.html
@@ -96,7 +96,7 @@
 		<!-- 网站内容部分 -->
     <section id="content">
     	<div class="container_16">
-    		<!-- <div class="clearfix"> -->
+    		<div class="clearfix">
     			<section id="mainContent" class="grid_10">
     				<article>
     					<h2>欢迎来到国外不动产投资管理中心</h2>
@@ -159,7 +159,7 @@
     					</article>
     				</div>
     			</aside>
-    		<!-- </div> -->
+    		</div>
     	</div> <!-- end of container_16 -->
     </section>
 	</body>
