--- a/soufang/index.html
+++ b/soufang/index.html
@@ -161,6 +161,24 @@
     			</aside>
     		</div>
     	</div> <!-- end of container_16 -->
-    </section>
+    </section><!-- end of content -->
+
+    <footer>
+    	<div class="container_16">
+    		<nav>
+    			<ul>
+    				<li><a href="index.html">首页</a></li>
+    				<li><a href="#">出售房源</a></li>
+    				<li><a href="#">购买信息</a></li>
+    				<li><a href="#">出租房源</a></li>
+    				<li><a href="#">房屋过户</a></li>
+    				<li><a href="#">账户信息</a></li>
+    				<li><a href="#">联系我们</a></li>
+    			</ul>
+    		</nav>
+    		<p class="copy"><span>房产网站</span>&nbsp;&copy; &nbsp;2010 &nbsp; &nbsp; <a href="#">隐私宣言</a></p>
+    	</div>
+    </footer>
+
 	</body>
 </html>
