--- a/soufang/selling.html
+++ b/soufang/selling.html
@@ -124,6 +124,30 @@
     					<a href="#" class="button">了解更多</a>
     				</article>
     			</section>
+
+    			<aside class="grid_6">
+    				<div class="prefix_1">
+    					<article>
+    						<div class="box">
+    							<h2>查找合适的经纪人</h2>
+    							<h3><a href="#">经纪人小知识</a></h3>
+    							<p>在你有权利有名望的时候，卑鄙的人是不敢抬起嫉妒的眼睛看你一眼的；然而，到你一落千丈的时候，显示最大的毒辣的就是他们。——《克雷洛夫寓言》</p>
+    							<p>在你有权利有名望的时候，卑鄙的人是不敢抬起嫉妒的眼睛看你一眼的；然而，到你一落千丈的时候，显示最大的毒辣的就是他们。——《克雷洛夫寓言》</p>
+    						</div>
+    					</article>
+
+    					<article class="last">
+    						<h2>查找销售</h2>
+    						<h4>在你有权力有名望的时候，卑鄙的人是不敢抬起嫉妒的眼睛看你一眼的；然而，到你一落千丈的时候，显示最大的毒辣的就是他们。 —— 《克雷洛夫寓言》</h4>
+    						<p>在你有权力有名望的时候，卑鄙的人是不敢抬起嫉妒的眼睛看你一眼的；然而，到你一落千丈的时候，显示最大的毒辣的就是他们。 —— 《克雷洛夫寓言》</p>
+    						<p>在你有权力有名望的时候，卑鄙的人是不敢抬起嫉妒的眼睛看你一眼的；然而，到你一落千丈的时候，显示最大的毒辣的就是他们。 —— 《克雷洛夫寓言》</p>
+    						<a href="#" class="button">了解更多</a>
+    					</article>
+
+
+    				</div>
+
+    			</aside>
     		</div>
     	</div>
     </section>
